Updates for 2.16
Signed-off-by: kingthorin <kingthorin@users.noreply.github.com>